argocd/base/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    app.kubernetes.io/name: cloudops-store
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: cloudops-store
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: cloudops-store
    app.kubernetes.io/component: api
  ports:
    - name: http
      port: 8000
      targetPort: http
